--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       name="description"
       content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it."
     />
-    <meta name="keywords" content="shyam,rincy,wedding,website,rsvp" />
-    <meta name="author" content="Shyam & Rincy" />
+    <meta name="keywords" content="Reachsak,rincy,wedding,website,rsvp" />
+    <meta name="author" content="Reachsak & Thyda" />
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:image" content="images/og.jpg" />
@@ -29,7 +29,7 @@
     <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
     <!-- Website to visit when clicked in fb or WhatsApp-->
-    <meta property="og:url" content="https://we.shyamjos.com" />
+    <meta property="og:url" content="https://we.Reachsakjos.com" />
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/jpeg" />
 
@@ -117,9 +117,9 @@
                   class="display-tc animate-box"
                   data-animate-effect="fadeIn"
                 >
-                  <h1>Shyam &amp; Rincy</h1>
+                  <h1>Reachsak &amp; Rincy</h1>
                   <br />
-                  <img src="images/fprint.png" alt="Shyam + Rincy" />
+                  <img src="images/fprint.png" alt="Reachsak + Rincy" />
                   <h2>29.10.2023</h2>
                   <h2>
                     "I have found the one whom my soul loves." <br />Song of
@@ -315,7 +315,7 @@
     <script src="js/main.js"></script>
     <center>
       View Source Code on
-      <a href="https://github.com/shyamjos/wedding-website"
+      <a href="https://github.com/Reachsakjos/wedding-website"
         >GitHub <img src="images/github-logo.png" />
       </a>
     </center>
