--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it."
     />
-    <meta name="keywords" content="Reachsak,rincy,wedding,website,rsvp" />
+    <meta name="keywords" content="Reachsak,Thyda,wedding,website,rsvp" />
     <meta name="author" content="Reachsak & Thyda" />
 
     <!-- Facebook and Twitter integration -->
@@ -117,9 +117,9 @@
                   class="display-tc animate-box"
                   data-animate-effect="fadeIn"
                 >
-                  <h1>Reachsak &amp; Rincy</h1>
+                  <h1>Reachsak &amp; Thyda</h1>
                   <br />
-                  <img src="images/fprint.png" alt="Reachsak + Rincy" />
+                  <img src="images/fprint.png" alt="Reachsak + Thyda" />
                   <h2>29.10.2023</h2>
                   <h2>
                     "I have found the one whom my soul loves." <br />Song of
