--- a/index.html
+++ b/index.html
@@ -140,6 +140,52 @@
         </div>
       </header>
 
+      <div id="fh5co-gallery" class="fh5co-section-gray">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box"
+            >
+              <h2>Gallery</h2>
+            </div>
+          </div>
+          <div class="row row-bottom-padded-md">
+            <div class="col-md-12">
+              <ul id="fh5co-gallery-list">
+                <li
+                  class="one-third animate-box"
+                  data-animate-effect="fadeIn"
+                  style="background-image: url(images/RS1.jpg)"
+                >
+                  <a href="images/RS1.jpg">
+                    <div class="case-studies-summary"></div>
+                  </a>
+                </li>
+
+                <li
+                  class="one-third animate-box"
+                  data-animate-effect="fadeIn"
+                  style="background-image: url(images/RS2.jpg)"
+                >
+                  <a href="images/RS2.jpg">
+                    <div class="case-studies-summary"></div>
+                  </a>
+                </li>
+                <li
+                  class="one-third animate-box"
+                  data-animate-effect="fadeIn"
+                  style="background-image: url(images/RS3.jpg)"
+                >
+                  <a href="images/RS3.jpg">
+                    <div class="case-studies-summary"></div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div id="fh5co-event" class="fh5co-bg">
         <div class="overlay"></div>
         <div class="container">
