--- a/index.html
+++ b/index.html
@@ -120,11 +120,8 @@
                   <h1>Reachsak &amp; Thyda</h1>
                   <br />
                   <img src="images/fprint.png" alt="Reachsak + Thyda" />
-                  <h2>29.10.2023</h2>
-                  <h2>
-                    "I have found the one whom my soul loves." <br />Song of
-                    Solomon 3:4
-                  </h2>
+                  <h2>19.06.2026</h2>
+                  <h2>"I have found the one whom my soul loves."</h2>
                   <div class="flipTimebox">
                     <div class="clock clock-fix"></div>
                   </div>
